--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Vue + Webpack Starter Kit</title>
+        <title>My YouTube Channel</title>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
     <body>
